--- a/Calculator/Base.lproj/Main.storyboard
+++ b/Calculator/Base.lproj/Main.storyboard
@@ -213,7 +213,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1" y="130"/>
+            <point key="canvasLocation" x="0.80000000000000004" y="129.98500749625188"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="NGN-A4-4LW">
